# RemoteBackup

./: .gitignore  CMakeLists.txt  README.md
Headers/Client/: ClientEngine.h  FileWatcher.h
Headers/General/: Message.h  Utils.h
Headers/Server/: Database.h  ServerEngine.h
Sources/Client/: ClientEngine.cpp  ClientMain.cpp  FileWatcher.cpp
Sources/General/: Message.cpp  Utils.cpp
Sources/Server/: Database.cpp  ServerEngine.cpp  ServerMain.cpp
